--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": false,
   "dependencies": {
     "chai": "^4.2.0",
+    "deep-equal-in-any-order": "^1.0.21",
     "eslint": "^6.8.0",
     "mocha": "^6.2.2",
     "prettier": "^1.19.1"
